--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="weather app for herolo"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="./all.css">
+    <link rel="stylesheet" href="./css/all.css">
     <title>React App</title>
   </head>
   <body>
